--- a/test.html
+++ b/test.html
@@ -3,68 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joshua Koo | Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            text-align: center;
-            padding: 20px;
-            border-bottom: 2px solid #fff;
-        }
-        section {
-            padding: 40px;
-            max-width: 800px;
-            margin: auto;
-        }
-        .project {
-            border: 1px solid #fff;
-            padding: 15px;
-            margin: 10px 0;
-        }
-        a {
-            color: #fff;
-            text-decoration: none;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            border-top: 2px solid #fff;
-        }
-    </style>
+    <title>Your Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <h1>Joshua Yunmo Koo</h1>
-        <p>Entrepreneur | Engineer | Musician</p>
-    </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Passionate about culture, technology, and venture capital. Combining creativity across industries.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>TreeHacks 2025</h3>
-            <p>Coordinating sponsorships for Stanford’s premier hackathon.</p>
-        </div>
-        <div class="project">
-            <h3>K-Pop Research</h3>
-            <p>Investigating idol training processes and their impact on global popularity.</p>
-        </div>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:jkoo@stanford.edu">jkoo@stanford.edu</a></p>
-        <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
-    </section>
-    <footer>
-        <p>&copy; 2025 Joshua Koo</p>
-    </footer>
-</body>
-</html>
+    <div class="container">
+        <header>
+            <nav class="nav-links">
+                <a href="#about">ABOUT</a>
+                <a href="#experiences">EXPERIENCES</a>
+                <a href="#writings">WRITINGS</a>
+                <a href="#thoughts">THOUGHTS</a>
+                <a href="#contact">CONTACT</a>
+            </nav>
+        </header>
+
+        <main>
+            <section id="about">
+                <h2>ABOUT</h2>
+                <div class="content">
+                    <p>Your story and background here.</p>
+                </div>
+            </section>
