--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <nav class="nav-links">
+                <a href="#about">ABOUT</a>
+                <a href="#experiences">EXPERIENCES</a>
+                <a href="#writings">WRITINGS</a>
+                <a href="#thoughts">THOUGHTS</a>
+                <a href="#contact">CONTACT</a>
+            </nav>
+        </header>
 
+        <main>
+            <section id="about">
+                <h2>ABOUT</h2>
+                <div class="content">
+                    <p>Your story and background here.</p>
+                </div>
+            </section>
