--- a/index.html
+++ b/index.html
@@ -27,3 +27,69 @@
                     <p>Your story and background here.</p>
                 </div>
             </section>
+
+            <section id="experiences">
+                <h2>EXPERIENCES</h2>
+                <div class="content">
+                    <div class="experience-item">
+                        <h3>Position Title</h3>
+                        <p class="date">2023 - Present</p>
+                        <p>Description of your role and achievements</p>
+                    </div>
+                    <div class="experience-item">
+                        <h3>Previous Role</h3>
+                        <p class="date">2021 - 2023</p>
+                        <p>Previous role description</p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="writings">
+                <h2>WRITINGS</h2>
+                <div class="content">
+                    <div class="writing-grid">
+                        <div class="writing-item">
+                            <h3>Article Title</h3>
+                            <p>Brief description of the article</p>
+                            <a href="#" class="read-more">Read More →</a>
+                        </div>
+                        <div class="writing-item">
+                            <h3>Another Article</h3>
+                            <p>Brief description of another article</p>
+                            <a href="#" class="read-more">Read More →</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="thoughts">
+                <h2>THOUGHTS</h2>
+                <div class="content">
+                    <p>Share your thoughts and insights here.</p>
+                </div>
+            </section>
+
+            <section id="contact">
+                <h2>CONTACT</h2>
+                <div class="content">
+                    <div class="social-links">
+                        <a href="https://twitter.com/yourusername" target="_blank" rel="noopener">
+                            <i class="fab fa-twitter"></i>
+                            <span>Twitter</span>
+                        </a>
+                        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">
+                            <i class="fab fa-linkedin"></i>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="mailto:your.email@example.com">
+                            <i class="fas fa-envelope"></i>
+                            <span>Email</span>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <script src="./script.js"></script>
+</body>
+</html>
