--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
+    <title>Joshua Koo - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -19,69 +19,72 @@
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
-
         <main>
-            <section id="about">
+            <section id="about" class="fade-in">
                 <h2>ABOUT</h2>
                 <div class="content">
-                    <p>Your story and background here.</p>
+                    <div class="about-grid">
+                        <div class="about-text">
+                            <p>Freshman at Stanford studying CS + Math, bullish on crypto (and AI), interested in startups and vc.</p>
+                            <p>Incoming @ NEAR Protocol</p>
+                            <p class="location">United States</p>
+                        </div>
+                        <div class="profile-stats">
+                            <p>500+ connections</p>
+                        </div>
+                    </div>
                 </div>
             </section>
-
             <section id="experiences">
                 <h2>EXPERIENCES</h2>
                 <div class="content">
-                    <div class="experience-item">
-                        <h3>Position Title</h3>
-                        <p class="date">2023 - Present</p>
-                        <p>Description of your role and achievements</p>
-                    </div>
-                    <div class="experience-item">
-                        <h3>Previous Role</h3>
-                        <p class="date">2021 - 2023</p>
-                        <p>Previous role description</p>
-                    </div>
-                </div>
-            </section>
-
-            <section id="writings">
-                <h2>WRITINGS</h2>
-                <div class="content">
-                    <div class="writing-grid">
-                        <div class="writing-item">
-                            <h3>Article Title</h3>
-                            <p>Brief description of the article</p>
-                            <a href="#" class="read-more">Read More →</a>
+                    <div class="experience-item slide-up">
+                        <div class="company-logo">
+                            <img src="/api/placeholder/48/48" alt="Stanford Blockchain Club" />
                         </div>
-                        <div class="writing-item">
-                            <h3>Another Article</h3>
-                            <p>Brief description of another article</p>
-                            <a href="#" class="read-more">Read More →</a>
+                        <h3>Head of Growth and Community</h3>
+                        <p class="company">Stanford Blockchain Club</p>
+                        <p class="date">Dec 2024 - Present · 3 mos</p>
+                        <p class="previous-role">Event Organizer · Sep 2024 - Dec 2024 · 4 mos</p>
+                    </div>
+                    <div class="experience-item slide-up">
+                        <div class="company-logo">
+                            <img src="/api/placeholder/48/48" alt="TreeHacks" />
                         </div>
+                        <h3>Organizer</h3>
+                        <p class="company">TreeHacks</p>
+                        <p class="date">Oct 2024 - Present · 5 mos</p>
+                        <p>Largest collegiate hackathon in North America</p>
+                    </div>
+                    <div class="experience-item slide-up">
+                        <div class="company-logo">
+                            <img src="/api/placeholder/48/48" alt="Symbolic Capital" />
+                        </div>
+                        <h3>Intern</h3>
+                        <p class="company">Symbolic Capital · Part-time</p>
+                        <p class="date">Oct 2024 - Feb 2025 · 5 mos</p>
+                        <p>Investment research under Chad Liu</p>
+                    </div>
+                    <div class="experience-item slide-up">
+                        <div class="company-logo">
+                            <img src="/api/placeholder/48/48" alt="Alphag3n" />
+                        </div>
+                        <h3>Founder and CEO</h3>
+                        <p class="company">Alphag3n · Self-employed</p>
+                        <p class="date">Sep 2022 - Sep 2024 · 2 yrs 1 mo</p>
+                        <p>Sponsored by Coinbase, Solana, and Polygon</p>
                     </div>
                 </div>
             </section>
-
-            <section id="thoughts">
-                <h2>THOUGHTS</h2>
-                <div class="content">
-                    <p>Share your thoughts and insights here.</p>
-                </div>
-            </section>
-
             <section id="contact">
                 <h2>CONTACT</h2>
                 <div class="content">
                     <div class="social-links">
-                        <a href="https://twitter.com/yourusername" target="_blank" rel="noopener">
-                            <i class="fab fa-twitter"></i>
-                            <span>Twitter</span>
+                        <a href="https://joshuakoo.framer.ai/" target="_blank" rel="noopener" class="website-link">
+                            <i class="fas fa-globe"></i>
+                            <span>Portfolio</span>
                         </a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener">
-                            <i class="fab fa-linkedin"></i>
-                            <span>LinkedIn</span>
-                        </a>
-                        <a href="mailto:your.email@example.com">
+                        <a href="mailto:joskoo@stanford.edu" class="email-link">
                             <i class="fas fa-envelope"></i>
                             <span>Email</span>
                         </a>
