--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joshua Koo - Portfolio</title>
+    <title>Joshua Koo</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -15,7 +15,6 @@
                 <a href="#about">ABOUT</a>
                 <a href="#experiences">EXPERIENCES</a>
                 <a href="#writings">WRITINGS</a>
-                <a href="#thoughts">THOUGHTS</a>
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
@@ -28,9 +27,6 @@
                             <p>Freshman at Stanford studying CS + Math, bullish on crypto (and AI), interested in startups and vc.</p>
                             <p>Incoming @ NEAR Protocol</p>
                             <p class="location">United States</p>
-                        </div>
-                        <div class="profile-stats">
-                            <p>500+ connections</p>
                         </div>
                     </div>
                 </div>
