--- a/index.html
+++ b/index.html
@@ -76,11 +76,15 @@
                 <h2>CONTACT</h2>
                 <div class="content">
                     <div class="social-links">
-                        <a href="https://joshuakoo.framer.ai/" target="_blank" rel="noopener" class="website-link">
-                            <i class="fas fa-globe"></i>
-                            <span>Portfolio</span>
+                        <a href="https://x.com/joshuaykoo" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-x-twitter"></i>
+                            <span>X (Twitter)</span>
                         </a>
-                        <a href="mailto:joskoo@stanford.edu" class="email-link">
+                        <a href="https://www.linkedin.com/in/joshuaykoo/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-linkedin"></i>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="mailto:joskoo@stanford.edu" class="social-link">
                             <i class="fas fa-envelope"></i>
                             <span>Email</span>
                         </a>
