--- a/writings.html
+++ b/writings.html
@@ -22,14 +22,8 @@
             <section id="writings">
                 <h2>WRITINGS</h2>
                 <div class="content">
-                    <div class="upload-container" id="uploadContainer">
-                        <h3>Upload a new writing</h3>
-                        <input type="file" id="fileInput" accept=".pdf" style="display: none;">
-                        <button class="upload-button" onclick="document.getElementById('fileInput').click()">Choose PDF</button>
-                        <p id="fileName"></p>
-                    </div>
                     <div class="writings-grid" id="writingsGrid">
-                        <!-- Uploaded PDFs will appear here -->
+                        <!-- PDF links will be dynamically added here -->
                     </div>
                 </div>
             </section>
