--- a/writings.html
+++ b/writings.html
@@ -23,7 +23,7 @@
                 <h2>WRITINGS</h2>
                 <div class="content">
                     <div class="writings-grid" id="writingsGrid">
-                        <object data="Manifolds.pdf" width="1000" height="1000" type='application/pdf'/>
+                        <object data="Manifolds.pdf" width="1000" height="1000" type="application/pdf"/>
                         <!-- PDF links will be dynamically added here -->
                     </div>
                 </div>
